--- a/README
+++ b/README
@@ -19,7 +19,7 @@ http://whytheluckystiff.net/o..e/adventure_time.flv
 
 2) Provide in "Name to save:" the movie's name to save.
 
-2a) Providing a name of a local movie in "Name to save:" without a download URL serve to play it.
+2a) Providing a name of a local movie in "Name to save:" without a download URL to play it.
 
 3) Click the "Download" button. The movie shows only after a bit of download (clicking play before, of course).
 
